
25. Fix: updated man page to version 2.4.  Updated version to 2.4.

26. Fix: static expressions, such as used in pragmas, are now being evaluated.

27. New: pragma declare_affinity and pragma affinity for design affinities.

28. New: pragma suppress( no_empty_command_substitutions ).

29. Fix: s := `` no longer gives a trailing whitespace error message.

30. Change: new support for GNU readline library (third-party areadline library removed).

31. Change: new command line completion capabilities (assignment completion, executable command completion, subcommand completion for certain Linux commands).

32. Fix: Updated Git prompt script example for GNU readline.

33. Fix: Files.Is_Directory no longer appends an unnecessary ASCII.NUL to the path.

34. New: shell history saved as file ~/.sparforte_history.

35. New: --color or --colour option to enable coloured messages and UTF-8 icons.

36. Fix: --gcc-errors no longer use bold on type errors.

37. Fix: --gcc-errors now takes effect for syntax checking, not just execution.

38. Fix: -e commands no longer require a trailing semi-colon.

39. New: strings.null_unbounded_string.

40. New: Support for FreeBSD 12.2 and the latest Raspian Linux.

41. Fix: mysqlm package no longer shows limited variable errors for connections and queries.  (mysql package unaffected)

42. Fix: dbm package no longer shows limited variable errors for connections and queries.  (db package unaffected)

43. Fix: fixes in third-party directory database tests.  tests are now passing.

44. New: pragma restriction( no_declarations_in_executable_statements ).

45. [Pascal] Change: declarations once again allowed in the executable part of a block, provided pragma ada_95 or pragma restriction( no_declarations_in_executable_statements ) are not used.

46. Fix: set_error( current_output ) within AdaScript `..` now works as expected, with the backqoutes capturing error output.
