@@ -106,3 +106,5 @@ CHANGES SINCE 2.3.1
 
 46. Fix: set_error( current_output ) within AdaScript `..` now works as expected, with the backqoutes capturing error output.
 
+47. Fix: SHELL environment variable more accurately reflects the absolute path of the shell, though there's still some cases that are not handled.
+
